opam-version: "2.0"
version: "2.0.0"
maintainer: "Vincent Jacques <vincent@vincent-jacques.net>"
authors: "Vincent Jacques <vincent@vincent-jacques.net>"
homepage: "https://jacquev6.github.io/JsOfOCairo/"
bug-reports: "http://github.com/jacquev6/JsOfOCairo/issues/"
license: "MIT"
doc: "https://jacquev6.github.io/JsOfOCairo/"
dev-repo: "git+https://github.com/jacquev6/JsOfOCairo.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "ocaml" {>= "4.02.3"}
  "dune" {build & >= "1.1.1"}
  "js_of_ocaml-compiler" {build & >= "3.0" & < "4.0"}
  "js_of_ocaml-ppx" {build & >= "3.0" & < "4.0"}
  "General" {with-test & >= "0.6.0"}
  "cairo2" {with-test & >= "0.6" & < "0.7"}
  "conf-npm" {with-test}
  "js_of_ocaml" {>= "3.0" & < "4.0"}
]
synopsis:
  "Library to reuse Cairo-based drawing code in web browsers"
conflicts: [
  "cairo2" {< "0.6"}
]
description: """
JsOfOCairo is an OCaml (4.02.3+) library to reuse Cairo-based drawing code in web browsers.
It's an adapter, implementing (a reasonable subset of) the interface of [Cairo OCaml](https://github.com/Chris00/ocaml-cairo/)
targeting HTML5 canvas elements as exposed to OCaml by [js_of_ocaml](https://ocsigen.org/js_of_ocaml/) (3.0.0+)."""
